# python-sdk

./: .gitignore  LICENSE  README.md  generate_wheel.sh  setup.cfg  setup.py
src/ssoconnector/: __init__.py  client.py  constant.py  exception.py
ssoconnector/: __init__.py  client.py  exception.py
