[metadata]
name = SSOConnector-Python-SDK
version = 0.0.1
author = Aayush Sinha
author_email = aayush@ssoconnector.com
description = Python SDK for SAML SSO using SSOConnector
license = MIT
keywords =
    saml
    sso
    ssoconnector
url = https://www.ssoconnector.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = find:

[flake8]
extend-ignore = E203, E501

[mypy]
python_version = 3.8
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true